--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=project
 
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/database
-spring.datasource.username=username
+spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
